@@ -389,7 +389,7 @@ CMaskNotGate::inGate(CEvent& rEvent)
   if (!rEvent[m_nId].isValid()) { // short circuit to false if param not set.
     return kfFALSE;		
   }
-  long value = rEvent[m_nId];
+  UInt_t value = rEvent[m_nId];
   unsigned long comp = ~m_cCompare;
   if ((value & comp) == comp )
     {
