@@ -473,3 +473,5 @@ SpecTcl-3.1-002
      calculated.. caused smaller allocations than should have been done.
      this caused corruption of the Xamine shared memory free list.
    - Improve performance of GUI parenting.
+   - Mask gates were not checked in a 64 bit pure way.. sign extends could
+     make the check incorrect.
